# protonupd

./: Makefile  README.md  flake.nix  protonupd.py  protonupd.spec  pyproject.toml
.copr/: Makefile
.local/: Makefile
completions/: _protonupd  protonupd.bash  protonupd.fish
docs/: USAGE.md
src/protonupd/: cli.py  constants.py  core.py
