[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "protonupd"
version = "3.0.1"
description = "Download and install Proton releases with centralized storage and symlink management"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "protonupd contributors" }
]
keywords = ["proton", "steam", "lutris", "bottles", "gaming"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Games/Entertainment",
  "Topic :: System :: Installation/Setup",
]

[project.scripts]
protonupd = "protonupd:main"

[tool.setuptools]
py-modules = ["protonupd"]

[tool.setuptools.data-files]
"share/bash-completion/completions" = ["assets/usr/share/bash-completion/completions/protonupd"]
"share/zsh/site-functions" = ["assets/usr/share/zsh/site-functions/_protonupd"]
"share/fish/completions" = ["assets/usr/share/fish/completions/protonupd.fish"]
